--- a/Christina_4_2/bin/AndroidManifest.xml
+++ b/Christina_4_2/bin/AndroidManifest.xml
@@ -7,7 +7,15 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="16" />
-
+<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" >
+    </uses-permission>
+        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" >
+    </uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -16,20 +24,33 @@
         <activity
             android:name="com.eflake.christina.FirstActivity"
             android:label="@string/app_name"
-            android:uiOptions="splitActionBarWhenNarrow">           
+            android:uiOptions="splitActionBarWhenNarrow" >
         </activity>
-        <activity android:name=".SplashActivity"
-            	android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
-             <intent-filter>
+        <activity
+            android:name=".SplashActivity"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-       <provider android:name="EflakeProvider" android:authorities="com.eflake.provider.items"></provider>
-       <activity android:name="CreateDiaryActivity" android:theme="@android:style/Theme.Holo.Light"></activity>
-       <activity android:name="DetailDiaryActivity" android:theme="@android:style/Theme.Holo.Light"></activity>
+
+        <provider
+            android:name="EflakeProvider"
+            android:authorities="com.eflake.provider.items" >
+        </provider>
+
+        <activity
+            android:name="CreateDiaryActivity"
+            android:theme="@android:style/Theme.Holo.Light" >
+        </activity>
+        <activity
+            android:name="DetailDiaryActivity"
+            android:theme="@android:style/Theme.Holo.Light" >
+        </activity>
     </application>
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    
+
 </manifest>
